fix vertical extra scrollbar in body

--- a/@antv/gatsby-theme-antv/site/components/Header.module.less
+++ b/@antv/gatsby-theme-antv/site/components/Header.module.less
@@ -98,6 +98,7 @@
   .nav {
     display: flex;
     align-items: center;
+    overflow: hidden;
 
     .menu {
       font-weight: normal;
